--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "firebase": "^9.19.1",
     "mongoose": "^7.0.3",
     "next": "13.3.0",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.21",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "swiper": "^9.2.0",
-    "tailwindcss": "3.3.1",
     "zustand": "^4.3.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.1"
   }
 }
